--- a/.github/workflows/lint_notebooks.yml
+++ b/.github/workflows/lint_notebooks.yml
@@ -32,10 +32,18 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install UV (faster package installer)
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      - name: Install CPU-only PyTorch (save disk space in CI)
+        run: |
+          uv pip install --system torch==2.3.1 torchvision --index-url https://download.pytorch.org/whl/cpu
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install .[dev]
+          uv pip install --system -e .[dev]
 
       - name: Lint
         run: ./scripts/lint_notebooks.sh
