--- a/.github/workflows/lint_notebooks.yml
+++ b/.github/workflows/lint_notebooks.yml
@@ -19,13 +19,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: pip cache
+      - name: UV cache
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip
-          key: pip-${{ hashFiles('**/pyproject.toml') }}
+          path: ~/.cache/uv
+          key: uv-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
-            pip-      
+            uv-      
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
