--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,13 +18,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: pip cache
+      - name: UV cache
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip
-          key: pip-${{ hashFiles('**/pyproject.toml') }}
+          path: ~/.cache/uv
+          key: uv-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
-            pip-      
+            uv-      
       
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -59,13 +59,18 @@ jobs:
                 export GOOGLE_APPLICATION_CREDENTIALS="$(pwd)/config-local/collab-data-463313-c340ad86b28e.json"
                 export GITHUB_ACTION=true
            
-      - name: Main Environment Setup 
-        run:  bash ./setup.sh
-                
-      - name: Development Environment Setup
+      - name: Install UV (faster package installer)
         run: |
-          python -m pip install --upgrade pip
-          pip install .[dev]
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      - name: Install CPU-only PyTorch (save disk space in CI)
+        run: |
+          uv pip install --system torch==2.3.1 torchvision --index-url https://download.pytorch.org/whl/cpu
+
+      - name: Install dependencies
+        run: |
+          uv pip install --system -e .[dev]
       
       - name: Run tests
         env:
