--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,33 +39,34 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
 
-      - name: Google Auth
-        id: auth
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: '${{ secrets.GCP_SERVICE_KEY }}' 
+      # NOTE: GCS credentials commented out - GCS tests are skipped via SKIP_GCS_TESTS
+      # - name: Google Auth
+      #   id: auth
+      #   uses: google-github-actions/auth@v2
+      #   with:
+      #     credentials_json: '${{ secrets.GCP_SERVICE_KEY }}'
 
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
-        with:
-          version: '>= 363.0.0'
-    
-      - name: 'Use gcloud CLI'
-        run: 'gcloud info'          
-          
-      - name: Create config-local folder
-        run: |
-                mkdir config-local
-      
-      - name: Copy GCP credentials
-        run: |
-                echo '${{ secrets.GCP_SERVICE_KEY }}' > ./config-local/collab-data-463313-c340ad86b28e.json
-      
-      - name: set environment variables
-        run: |
-                export GOOGLE_APPLICATION_CREDENTIALS="$(pwd)/config-local/collab-data-463313-c340ad86b28e.json"
-                export GITHUB_ACTION=true
-           
+      # - name: 'Set up Cloud SDK'
+      #   uses: 'google-github-actions/setup-gcloud@v2'
+      #   with:
+      #     version: '>= 363.0.0'
+
+      # - name: 'Use gcloud CLI'
+      #   run: 'gcloud info'
+
+      # - name: Create config-local folder
+      #   run: |
+      #           mkdir config-local
+
+      # - name: Copy GCP credentials
+      #   run: |
+      #           echo '${{ secrets.GCP_SERVICE_KEY }}' > ./config-local/collab-data-463313-c340ad86b28e.json
+
+      # - name: set environment variables
+      #   run: |
+      #           export GOOGLE_APPLICATION_CREDENTIALS="$(pwd)/config-local/collab-data-463313-c340ad86b28e.json"
+      #           export GITHUB_ACTION=true
+
       - name: Install UV (faster package installer)
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
@@ -82,4 +83,6 @@ jobs:
       - name: Run tests
         env:
           MKL_NUM_THREADS: 1
+          CI: "1"
+          SKIP_GCS_TESTS: "1"
         run: ./scripts/test.sh
