--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,12 +26,13 @@ jobs:
           restore-keys: |
             uv-      
       
-      - name: Install ExifTool
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y exiftool
-          # Cleanup to reduce disk usage in CI
-          sudo rm -rf /var/lib/apt/lists/*
+      # NOTE: ExifTool commented out - tracking tests are skipped via SKIP_GCS_TESTS
+      # - name: Install ExifTool
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y exiftool
+      #     # Cleanup to reduce disk usage in CI
+      #     sudo rm -rf /var/lib/apt/lists/*
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
