initial 3D GNN code included. A dataset can be built, a sample (and simple) GNN model is created, which can be trained, and basic plotting of attention weights is provided.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
 dependencies = [
   "torch>=2.1,<2.4",
   "torchvision",
+  "torchinfo",
   "pyro-ppl",
   "numpy<2",
   "pandas",
